# 20240528_rust-enums-structs-traits

./: Cargo.toml  README.md
projects/01_enums/: Cargo.toml
projects/01_enums/src/: main.rs
projects/02_enum_with_data/: Cargo.toml
projects/02_enum_with_data/src/: main.rs
projects/03_enum_with_structs/: Cargo.toml
projects/03_enum_with_structs/src/: main.rs
projects/04_enum_option/src/: main.rs
projects/05_struct_option_field/: Cargo.toml
projects/05_struct_option_field/src/: main.rs
projects/06_enum_result/: Cargo.toml  example.txt
projects/06_enum_result/src/: main.rs
projects/07_structs/src/: main.rs
projects/08_tuple_structs/: Cargo.toml
projects/08_tuple_structs/src/: main.rs
projects/09_struct_methods/: Cargo.toml
projects/09_struct_methods/src/: main.rs
projects/10_struct_associated_funcs/: Cargo.toml
projects/10_struct_associated_funcs/src/: main.rs
projects/11_struct_mut_methods/: Cargo.toml
projects/11_struct_mut_methods/src/: main.rs
projects/12_struct_mut_methods2/: Cargo.toml
projects/12_struct_mut_methods2/src/: main.rs
projects/13_nested_structs/: Cargo.toml
projects/13_nested_structs/src/: main.rs
projects/14_display_trait/: Cargo.toml
projects/14_display_trait/src/: main.rs
projects/15_trait_dynamic_dispatch/: Cargo.toml
projects/15_trait_dynamic_dispatch/src/: main.rs
projects/16_box_dyn_error_trait/: Cargo.toml
projects/16_box_dyn_error_trait/src/: main.rs
projects/17_custom_error_enum/: Cargo.toml
projects/19_custom_trait/: Cargo.toml
projects/20_generic_trait_bounds/: Cargo.toml
(+4 files in other folders)
